fix z-index values

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -329,7 +329,7 @@ div.wpcf7-validation-errors
   position: fixed
   right: 22%
   top: 10.5rem
-  z-index: 1000
+  z-index: 1300
   font-size: 1rem
   img
     width: 1.25rem
